# playwright-pytest

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  test_automation.py
src/playwright_pytest/: __init__.py
